@@ -18,8 +18,11 @@
  */
 package org.jasig.cas.adaptors.x509.authentication.handler.support;
 
+
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
+import java.net.URLDecoder;
 import java.security.cert.X509CRL;
 import java.security.cert.X509Certificate;
 import java.util.ArrayList;
@@ -27,7 +30,7 @@ import java.util.Arrays;
 import java.util.List;
 
 import org.jasig.cas.adaptors.x509.util.CertUtils;
-import org.springframework.core.io.UrlResource;
+import org.springframework.core.io.ByteArrayResource;
 
 import edu.vt.middleware.crypt.x509.ExtensionReader;
 import edu.vt.middleware.crypt.x509.types.DistributionPoint;
@@ -38,6 +41,7 @@ import edu.vt.middleware.crypt.x509.types.GeneralNameList;
 import net.sf.ehcache.Cache;
 import net.sf.ehcache.Element;
 
+import javax.validation.constraints.NotNull;
 
 /**
  * Performs CRL-based revocation checking by consulting resources defined in
@@ -57,17 +61,52 @@ public class CRLDistributionPointRevocationChecker extends AbstractCRLRevocation
     /** CRL cache. */
     private final Cache crlCache;
 
+    /** The CRL fetcher instance. **/
+    private final CRLFetcher fetcher;
+
+    private boolean throwOnFetchFailure;
 
     /**
      * Creates a new instance that uses the given cache instance for CRL caching.
      *
      * @param crlCache Cache for CRL data.
      */
-    public CRLDistributionPointRevocationChecker(final Cache crlCache) {
-        if (crlCache == null) {
-            throw new IllegalArgumentException("Cache cannot be null.");
-        }
+    public CRLDistributionPointRevocationChecker(@NotNull final Cache crlCache) {
+        this(crlCache, new ResourceCRLFetcher());
+    }
+
+    /**
+     * Creates a new instance that uses the given cache instance for CRL caching.
+     *
+     * @param crlCache Cache for CRL data.
+     * @param throwOnFetchFailure the throw on fetch failure
+     */
+    public CRLDistributionPointRevocationChecker(@NotNull final Cache crlCache,
+                                                 final boolean throwOnFetchFailure) {
+        this(crlCache, new ResourceCRLFetcher());
+        setThrowOnFetchFailure(throwOnFetchFailure);
+    }
+
+    /**
+     * Instantiates a new CRL distribution point revocation checker.
+     *
+     * @param crlCache the crl cache
+     * @param fetcher the fetcher
+     */
+    public CRLDistributionPointRevocationChecker(@NotNull final Cache crlCache,
+                                                 @NotNull final CRLFetcher fetcher) {
         this.crlCache = crlCache;
+        this.fetcher = fetcher;
+    }
+
+
+    /**
+     * Throws exceptions if fetching crl fails. Defaults to false.
+     *
+     * @param throwOnFetchFailure the throw on fetch failure
+     */
+    public void setThrowOnFetchFailure(final boolean throwOnFetchFailure) {
+        this.throwOnFetchFailure = throwOnFetchFailure;
     }
 
     /**
@@ -76,35 +115,58 @@ public class CRLDistributionPointRevocationChecker extends AbstractCRLRevocation
      */
     @Override
     protected X509CRL getCRL(final X509Certificate cert) {
-        final URL[] urls = getDistributionPoints(cert);
-        logger.debug(String.format(
-                "Distribution points for %s: %s.",
-                CertUtils.toString(cert), Arrays.asList(urls)));
+        final URI[] urls = getDistributionPoints(cert);
+        logger.debug("Distribution points for {}: {}.", CertUtils.toString(cert), Arrays.asList(urls));
 
-        Element item;
-        for (URL url : urls) {
-            item = this.crlCache.get(url);
-            if (item != null) {
-                logger.debug("Found CRL in cache for {}", CertUtils.toString(cert));
-                return (X509CRL) item.getObjectValue();
+        try {
+            for (final URI url : urls) {
+                final Element item = this.crlCache.get(url);
+                if (item != null) {
+                    logger.debug("Found CRL in cache for {}", CertUtils.toString(cert));
+                    final byte[] encodedCrl = (byte[]) item.getObjectValue();
+                    return this.fetcher.fetch(new ByteArrayResource(encodedCrl));
+                }
             }
+        } catch (final Exception e) {
+            throw new RuntimeException(e);
         }
 
         // Try all distribution points and stop at first fetch that succeeds
         X509CRL crl = null;
         for (int i = 0; i < urls.length && crl == null; i++) {
-            logger.info("Attempting to fetch CRL at {}", urls[i]);
+            final URI url = urls[i];
+            logger.info("Attempting to fetch CRL at {}", url);
             try {
-                crl = CertUtils.fetchCRL(new UrlResource(urls[i]));
-                logger.info("Success. Caching fetched CRL.");
-                this.crlCache.put(new Element(urls[i], crl));
+                crl = this.fetcher.fetch(url);
+                logger.info("Success. Caching fetched CRL at {}.", url);
+                addCRL(url, crl);
             } catch (final Exception e) {
-                logger.error("Error fetching CRL at {}", urls[i], e);
+                logger.error("Error fetching CRL at {}", url, e);
+                if (this.throwOnFetchFailure) {
+                    throw new RuntimeException(e);
+                }
             }
         }
 
         return crl;
     }
+
+    @Override
+    protected boolean addCRL(final Object id, final X509CRL crl) {
+        try {
+            if (crl == null) {
+                return this.crlCache.remove(id);
+            }
+
+            this.crlCache.put(new Element(id, crl.getEncoded()));
+            return this.crlCache.get(id) != null;
+
+        } catch (final Exception e) {
+            logger.warn("Failed to add the crl entry [{}] to the cache", crl);
+            throw new RuntimeException(e);
+        }
+    }
+
 
     /**
      * Gets the distribution points.
@@ -112,22 +174,22 @@ public class CRLDistributionPointRevocationChecker extends AbstractCRLRevocation
      * @param cert the cert
      * @return the url distribution points
      */
-    private URL[] getDistributionPoints(final X509Certificate cert) {
+    private URI[] getDistributionPoints(final X509Certificate cert) {
         final DistributionPointList points;
         try {
             points = new ExtensionReader(cert).readCRLDistributionPoints();
         } catch (final Exception e) {
-            logger.error("Error reading CRLDistributionPoints extension field on " + CertUtils.toString(cert), e);
-            return new URL[0];
+            logger.error("Error reading CRLDistributionPoints extension field on {}", CertUtils.toString(cert), e);
+            return new URI[0];
         }
 
-        final List<URL> urls = new ArrayList<>();
-        for (DistributionPoint point : points.getItems()) {
+        final List<URI> urls = new ArrayList<>();
+        for (final DistributionPoint point : points.getItems()) {
             final Object location = point.getDistributionPoint();
             if (location instanceof String) {
                 addURL(urls, (String) location);
             } else if (location instanceof GeneralNameList) {
-                for (GeneralName gn : ((GeneralNameList) location).getItems()) {
+                for (final GeneralName gn : ((GeneralNameList) location).getItems()) {
                     addURL(urls, gn.getName());
                 }
             } else {
@@ -135,24 +197,32 @@ public class CRLDistributionPointRevocationChecker extends AbstractCRLRevocation
             }
         }
 
-        return urls.toArray(new URL[urls.size()]);
+        return urls.toArray(new URI[urls.size()]);
     }
 
     /**
      * Adds the url to the list.
      * Build URI by components to facilitate proper encoding of querystring.
      * e.g. http://example.com:8085/ca?action=crl&issuer=CN=CAS Test User CA
-     * 
+     *
+     * <p>If <code>uriString</code> is encoded, it will be decoded with <code>UTF-8</code>
+     * first before it's added to the list.</p>
      * @param list the list
      * @param uriString the uri string
      */
-    private void addURL(final List<URL> list, final String uriString) {
+    private void addURL(final List<URI> list, final String uriString) {
         try {
-            final URL url = new URL(uriString);
-            final URI uri = new URI(url.getProtocol(), url.getAuthority(), url.getPath(), url.getQuery(), null);
-            list.add(uri.toURL());
+            URI uri = null;
+            try {
+                final URL url = new URL(URLDecoder.decode(uriString, "UTF-8"));
+                uri = new URI(url.getProtocol(), url.getAuthority(), url.getPath(), url.getQuery(), null);
+            } catch (final MalformedURLException e) {
+                uri = new URI(uriString);
+            }
+            list.add(uri);
         } catch (final Exception e) {
             logger.warn("{} is not a valid distribution point URI.", uriString);
         }
     }
+
 }
